; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_genattrtab.c_make_numeric_value.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_genattrtab.c_make_numeric_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@make_numeric_value.int_values = internal global [20 x i64] zeroinitializer, align 16
@MAX_DIGITS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@CONST_STRING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @make_numeric_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @make_numeric_value(i32 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp sge i32 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i32 @gcc_assert(i32 %8)
  %10 = load i32, i32* %3, align 4
  %11 = icmp slt i32 %10, 20
  br i1 %11, label %12, label %23

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds [20 x i64], [20 x i64]* @make_numeric_value.int_values, i64 0, i64 %14
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %12
  %19 = load i32, i32* %3, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds [20 x i64], [20 x i64]* @make_numeric_value.int_values, i64 0, i64 %20
  %22 = load i64, i64* %21, align 8
  store i64 %22, i64* %2, align 8
  br label %39

23:                                               ; preds = %12, %1
  %24 = load i32, i32* @MAX_DIGITS, align 4
  %25 = load i32, i32* %3, align 4
  %26 = call i8* @attr_printf(i32 %24, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %25)
  store i8* %26, i8** %5, align 8
  %27 = load i32, i32* @CONST_STRING, align 4
  %28 = load i8*, i8** %5, align 8
  %29 = call i64 @attr_rtx(i32 %27, i8* %28)
  store i64 %29, i64* %4, align 8
  %30 = load i32, i32* %3, align 4
  %31 = icmp slt i32 %30, 20
  br i1 %31, label %32, label %37

32:                                               ; preds = %23
  %33 = load i64, i64* %4, align 8
  %34 = load i32, i32* %3, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds [20 x i64], [20 x i64]* @make_numeric_value.int_values, i64 0, i64 %35
  store i64 %33, i64* %36, align 8
  br label %37

37:                                               ; preds = %32, %23
  %38 = load i64, i64* %4, align 8
  store i64 %38, i64* %2, align 8
  br label %39

39:                                               ; preds = %37, %18
  %40 = load i64, i64* %2, align 8
  ret i64 %40
}

declare dso_local i32 @gcc_assert(i32) #1

declare dso_local i8* @attr_printf(i32, i8*, i32) #1

declare dso_local i64 @attr_rtx(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
